Some regex dont work

--- a/formulario.html
+++ b/formulario.html
@@ -14,7 +14,7 @@
         <br>
         <input type="email" placeholder="Correo electrónico" name="correo" required id="email"><br>
         <br>
-        <input type="number" placeholder="Teléfono" name="telefono" id="movil" required><br>
+        <input type="text" placeholder="Teléfono" name="telefono" id="movil" required maxlength="12"><br>
         <br>
         <input type="text" placeholder="DNI" name="dni" required id="dni"><br>
         <br>
