Form and validation completed

--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
     <title>Epic</title>
 </head>
 <body>
-    <form>
+    <form action="html/registro_realizado.html">
         <input type="text" placeholder="Nombre" name="nombre" required><br>
         <br>
         <input type="text" placeholder="Apellidos" name="apellido" required><br>
@@ -21,7 +21,7 @@
         <br>
         <input type="text" placeholder="IBAN" name="iban" required id="iban" onchange="validar_iban()"><br>
         <br>
-        <input type="text" placeholder="Swift" name="swift" required><br>
+        <input type="text" placeholder="Swift" name="swift" id="swift"><br>
         <br>
         <input type="text" placeholder="Nombre usuario" name="usuario" required><br>
         <br>
