Started with css

--- a/formulario.html
+++ b/formulario.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <title>Epic</title>
+    <link rel="stylesheet" href="css/index_style.css">
+    <title>Minecraft</title>
 </head>
 <body>
+    <header>
+        <div class="global_banner">
+            <a class="promolink" href="https://www.minecraft.net/es-es/live">Minecraft Lice is back! Rune in Ocotber 15th at 12PM EDT.</a>
+            <nav class="topnav">
+                <ul>
+                    <li class="login"><a href="https://www.minecraft.net/es-es/login">Log in</a></li>
+                    <li class="redem"><a href="https://www.minecraft.net/es-es/redeem">Redeem</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="nav">
+            <nav class="menu">
+
+            </nav>
+            <div class="logo">
+                <a class="minecraft_logo" href="https://www.minecraft.net/es-es">
+                    <img class="minecraft" src="images/logo-minecraft.svg" alt="Logo de Minecraft">
+                </a>
+            </div>
+            <nav class="acc">
+
+            </nav>
+        </div>
+    </header>
     <form action="html/registro_realizado.html">
         <input type="text" placeholder="Nombre" name="nombre" required><br>
         <br>
