--- a/html/registro_realizado.html
+++ b/html/registro_realizado.html
@@ -5,9 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/registrado_style.css">
     <title>Registro realizado</title>
 </head>
+<header>
+    <div class="global_banner">
+        <a class="promolink" href="https://www.minecraft.net/es-es/live">Minecraft Lice is back! Rune in Ocotber 15th at 12PM EDT.</a>
+        <nav class="topnav">
+            <ul>
+                <li class="login"><a href="https://www.minecraft.net/es-es/login">Log in</a></li>
+                <li class="redem"><a href="https://www.minecraft.net/es-es/redeem">Redeem</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="nav">
+       
+        <nav class="menu">
+            <ul>
+                <li><a>Games</a>
+                    <ul>
+                        <li><a class="mine" href="https://www.minecraft.net/es-es/about-minecraft"><img src="../images/minecraft.jfif" class="logos">Minecraft</a></li>
+                        <li><a class="dun" href="https://www.minecraft.net/es-es/about-dungeons"><img src="../images/dungeons.jfif" class="logos">Minecraft Dungeons</a></li> 
+                        <li><a class="leg" href="https://www.minecraft.net/es-es/about-legends"><img src="../images/legens.jfif" class="logos">Minecraft Legends</a></li>
+                        <li><a class="edu" href="https://education.minecraft.net/es-es"><img src="../images/edu.jfif" class="logos">Minecraft Educational Edition</a></li>
+                    </ul>
+                </li>
+                <li><a href="https://www.minecraft.net/es-es/community">Comunity</a></li>
+                <li><a href="https://shop.minecraft.net/">Merch</a></li>
+                <li><a href="https://help.minecraft.net/hc/en-us">Support</a></li>
+            </ul>
+        </nav>
+        <div class="logo">
+            <a class="minecraft_logo" href="https://www.minecraft.net/es-es">
+                <img class="minecraft" src="../images/logo-minecraft.svg" alt="Logo de Minecraft">
+            </a>
+        </div>
+        <nav class="acc">
+            <ul>
+                <li><a href="https://www.minecraft.net/es-es/get-minecraft">Get Minecraft</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 <body>
+    <div class="notif">
+        <h1>Enhorabuena te has registrado con exito</h1>
+    </div>
+    
+    <footer>
+        <section class="redes">
+            <h3>Follow Minecraft</h3>
+        </section>
+    </footer>
     <script src="../js/myscript2.js"></script>
 </body>
 </html>
