--- a/formulario.html
+++ b/formulario.html
@@ -49,7 +49,7 @@
 </header>
 <body>
     <div >
-        <form class="formulario" action="html/registro_realizado.html">
+        <form class="formulario" id="form" action="html/registro_realizado.html">
             <h1>Registrate</h1>
             <label>Nombre</label>
             <input type="text"  name="nombre" required>
